tests/negative/gold/default_values5_test.gold
tests/negative/default_values5_test.toit:4:5: error: Block parameters may not have a default value.
foo [x]=(499):
    ^~
tests/negative/default_values5_test.toit:5:10: error: Can't return a block
  return x
         ^
tests/negative/default_values5_test.toit:8:3: error: Argument mismatch for 'foo'
Block argument not provided
  foo
  ^~~
tests/negative/default_values5_test.toit:9:3: error: Argument mismatch for 'foo'
Method does not take any arguments, but one was provided
  foo null
  ^~~
Compilation failed.
